packages/prop-house-webapp/src/pages/MainApp/MainApp.module.css
.housesContainer {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding-top: 12px;
}

.houseAddress {
  font-weight: bold;
  font-size: 16px;
}
.tabs {
  border-bottom: none;
}
.tabs li button {
  font-size: 21px;
  font-weight: 500;
  color: var(--brand-gray);
  transition: none !important;
}
.tabs li button[aria-selected='true'] {
  border: none !important;
  font-weight: bold !important;
  color: var(--brand-black) !important;
  border-bottom: 2px solid var(--brand-purple) !important;
  background-color: transparent !important;
}

